# torana-engine

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
docs/: CHANGELOG.md  README.md  architecture.md
docs/adr/: 001-src-layout.md  002-plugin-contract.md  003-workflow-dag.md  004-task-independence.md  005-registry-design.md  006-stateless-scheduler.md  007-execution-manager.md  008-engine-composition.md  README.md
docs/analysis-framework/: README.md  analysis_configuration.md  architecture.md  base_analysis.md  planner.md  testing.md
docs/architecture/: architecture.md  concepts.md  engine.md  execution_context.md  plugin.md  scheduler.md  task_system.md  workflow.md
docs/dataset-framework/: dataset_architecture.md  dataset_development_guide.md  dataset_manifest.md  dataset_provider.md  dataset_registry.md  dataset_tests.md  dataset_validation.md
docs/plugin-framework/: README.md
docs/project/: ARCHITECTURE_PATTERNS.md  CODING_STANDARDS.md  CURRENT_PHASE.md  DECISIONS.md  DEFINITION_OF_DONE.md  DESIGN_PRINCIPLES.md  ENGINEERING_GUIDELINES.md  FRAMEWORKS.md  MILESTONES.md  PROJECT_STATUS.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  TESTING_STANDARD.md  VERSIONING.md
docs/specifications/: plugin_spec.md
src/torana/: __init__.py  __main__.py
src/torana/core/: job.py  (+6 more)
tests/: conftest.py  test_plugin.py  test_task.py
tests/analysis_framework/: __init__.py  conftest.py  test_base_analysis.py  test_configuration.py  test_context.py  test_manifest.py  test_planner.py
tests/core/: test_job.py  test_workflow.py
(+91 files in other folders)
